// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> initialises can be \`fixed\` 1`] = `
<ul
  className="sidenav sidenav-fixed red"
  id="sidenav_2"
/>
`;

exports[`<SideNav /> initialises can render a \`trigger\` 1`] = `
<button
  className="trigger show-on-large sidenav-trigger"
  data-target="sidenav_3"
>
  Show sidenav
</button>
`;

exports[`<SideNav /> initialises renders 1`] = `
<ul
  className="sidenav"
  id="sidenav_1"
/>
`;

exports[`<SideNav /> initialises should be fixed if no trigger is passed 1`] = `
<ul
  className="sidenav sidenav-fixed red"
  id="sidenav_4"
/>
`;
